---
source: tests/lir_from_hir.rs
expression: project
---
items:
  - Structure:
      name: GainPID
      fields:
        - - k_p
          - Float
        - - k_i
          - Float
        - - k_d
          - Float
  - Function:
      name: min
      generics: []
      inputs:
        - - a
          - Float
        - - b
          - Float
      output: Float
      body:
        statements:
          - Let:
              identifier: test
              expression:
                FunctionCall:
                  function:
                    Identifier:
                      identifier: " > "
                  arguments:
                    - Identifier:
                        identifier: a
                    - Identifier:
                        identifier: b
          - Let:
              identifier: result
              expression:
                IfThenElse:
                  condition:
                    Identifier:
                      identifier: test
                  then_branch:
                    statements:
                      - ExpressionLast:
                          expression:
                            Identifier:
                              identifier: b
                  else_branch:
                    statements:
                      - ExpressionLast:
                          expression:
                            Identifier:
                              identifier: a
          - ExpressionLast:
              expression:
                Identifier:
                  identifier: result
      imports: []
  - NodeFile:
      name: integrate_i
      imports:
        - Function: min
      input:
        node_name: integrate_i
        elements:
          - identifier: x
            type: Float
          - identifier: dt
            type: Float
        generics: []
      state:
        node_name: integrate_i
        elements:
          - Buffer:
              identifier: mem_prev_i
              type: Float
        step:
          node_name: integrate_i
          generics: []
          output_type: Float
          body:
            - Let:
                identifier: MAX_INTEGRALE
                expression:
                  Literal:
                    literal:
                      Float: 1000
            - Let:
                identifier: prev_i
                expression:
                  MemoryAccess:
                    identifier: mem_prev_i
            - Let:
                identifier: i
                expression:
                  FunctionCall:
                    function:
                      Identifier:
                        identifier: min
                    arguments:
                      - FunctionCall:
                          function:
                            Identifier:
                              identifier: " + "
                          arguments:
                            - Identifier:
                                identifier: prev_i
                            - FunctionCall:
                                function:
                                  Identifier:
                                    identifier: " * "
                                arguments:
                                  - InputAccess:
                                      identifier: x
                                  - InputAccess:
                                      identifier: dt
                      - Identifier:
                          identifier: MAX_INTEGRALE
          state_elements_step:
            - identifier: mem_prev_i
              expression:
                Identifier:
                  identifier: i
          output_expression:
            Identifier:
              identifier: i
          contract:
            requires: []
            ensures: []
            invariant: []
        init:
          node_name: integrate_i
          state_elements_init:
            - BufferInit:
                identifier: mem_prev_i
                initial_value:
                  Float: 0
          invariant_initialisation: []
  - NodeFile:
      name: derive_d
      imports: []
      input:
        node_name: derive_d
        elements:
          - identifier: x
            type: Float
          - identifier: dt
            type: Float
        generics: []
      state:
        node_name: derive_d
        elements:
          - Buffer:
              identifier: mem_prev_x
              type: Float
        step:
          node_name: derive_d
          generics: []
          output_type: Float
          body:
            - Let:
                identifier: prev_x
                expression:
                  MemoryAccess:
                    identifier: mem_prev_x
            - Let:
                identifier: d
                expression:
                  FunctionCall:
                    function:
                      Identifier:
                        identifier: " / "
                    arguments:
                      - FunctionCall:
                          function:
                            Identifier:
                              identifier: (_)
                          arguments:
                            - FunctionCall:
                                function:
                                  Identifier:
                                    identifier: " - "
                                arguments:
                                  - InputAccess:
                                      identifier: x
                                  - Identifier:
                                      identifier: prev_x
                      - InputAccess:
                          identifier: dt
          state_elements_step:
            - identifier: mem_prev_x
              expression:
                InputAccess:
                  identifier: x
          output_expression:
            Identifier:
              identifier: d
          contract:
            requires: []
            ensures: []
            invariant: []
        init:
          node_name: derive_d
          state_elements_init:
            - BufferInit:
                identifier: mem_prev_x
                initial_value:
                  Float: 0
          invariant_initialisation: []
  - NodeFile:
      name: pid_u
      imports:
        - NodeFile: derive_d
        - NodeFile: integrate_i
        - Structure: GainPID
      input:
        node_name: pid_u
        elements:
          - identifier: v_c
            type: Float
          - identifier: v
            type: Float
          - identifier: dt
            type: Float
        generics: []
      state:
        node_name: pid_u
        elements:
          - CalledNode:
              identifier: integrate_i
              node_name: integrate_i
          - CalledNode:
              identifier: derive_d
              node_name: derive_d
        step:
          node_name: pid_u
          generics: []
          output_type: Float
          body:
            - Let:
                identifier: e
                expression:
                  FunctionCall:
                    function:
                      Identifier:
                        identifier: " - "
                    arguments:
                      - InputAccess:
                          identifier: v_c
                      - InputAccess:
                          identifier: v
            - Let:
                identifier: e_d
                expression:
                  NodeCall:
                    node_identifier: derive_d
                    input_name: DeriveDInput
                    input_fields:
                      - - x
                        - Identifier:
                            identifier: e
                      - - dt
                        - InputAccess:
                            identifier: dt
            - Let:
                identifier: e_i
                expression:
                  NodeCall:
                    node_identifier: integrate_i
                    input_name: IntegrateIInput
                    input_fields:
                      - - x
                        - Identifier:
                            identifier: e
                      - - dt
                        - InputAccess:
                            identifier: dt
            - Let:
                identifier: gain
                expression:
                  Structure:
                    name: GainPID
                    fields:
                      - - k_p
                        - Literal:
                            literal:
                              Float: 0.2
                      - - k_i
                        - Literal:
                            literal:
                              Float: 1.5
                      - - k_d
                        - Literal:
                            literal:
                              Float: 6
            - Let:
                identifier: u
                expression:
                  Match:
                    matched:
                      FunctionCall:
                        function:
                          Identifier:
                            identifier: (_)
                        arguments:
                          - Identifier:
                              identifier: gain
                    arms:
                      - - Structure:
                            name: GainPID
                            fields:
                              - - k_p
                                - Identifier:
                                    name: k_p
                              - - k_i
                                - Identifier:
                                    name: k_i
                              - - k_d
                                - Identifier:
                                    name: k_d
                        - ~
                        - FunctionCall:
                            function:
                              Identifier:
                                identifier: " + "
                            arguments:
                              - FunctionCall:
                                  function:
                                    Identifier:
                                      identifier: " + "
                                  arguments:
                                    - FunctionCall:
                                        function:
                                          Identifier:
                                            identifier: " * "
                                        arguments:
                                          - Identifier:
                                              identifier: k_p
                                          - Identifier:
                                              identifier: e
                                    - FunctionCall:
                                        function:
                                          Identifier:
                                            identifier: " * "
                                        arguments:
                                          - Identifier:
                                              identifier: k_i
                                          - Identifier:
                                              identifier: e_i
                              - FunctionCall:
                                  function:
                                    Identifier:
                                      identifier: " * "
                                  arguments:
                                    - Identifier:
                                        identifier: k_d
                                    - Identifier:
                                        identifier: e_d
          state_elements_step: []
          output_expression:
            Identifier:
              identifier: u
          contract:
            requires: []
            ensures: []
            invariant: []
        init:
          node_name: pid_u
          state_elements_init:
            - CalledNodeInit:
                identifier: integrate_i
                node_name: integrate_i
            - CalledNodeInit:
                identifier: derive_d
                node_name: derive_d
          invariant_initialisation: []

